change "weeklyDay" to "weeklyDays"