@@ -114,7 +114,7 @@ public class AppointmentServiceImpl implements AppointmentService {
                     appointments.addAll(createDailyAppointments(baseAppointment));
                     break;
                 case WEEKLY:
-                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDay());
+                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDays());
                     appointments.addAll(createWeeklyAppointments(baseAppointment, weeklyDays));
                     break;
                 case ONLY:
@@ -399,15 +399,15 @@ public class AppointmentServiceImpl implements AppointmentService {
     }
 
     private void validateWeeklyRecurrence(RequestAppointmentDto appointmentDto, Map<String, String> errors) {
-        List<String> weeklyDays = appointmentDto.getWeeklyDay();
+        List<String> weeklyDays = appointmentDto.getWeeklyDays();
         if (weeklyDays == null || weeklyDays.isEmpty()) {
-            errors.put("weeklyDay", "Weekly days must be specified for weekly recurring appointments");
+            errors.put("weeklyDays", "Weekly days must be specified for weekly recurring appointments");
             return;
         }
 
         List<String> invalidDays = weeklyDays.stream()
                 .filter(day -> !isValidWeekDay(day))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!invalidDays.isEmpty()) {
             errors.put("weeklyDay",
@@ -587,7 +587,7 @@ public class AppointmentServiceImpl implements AppointmentService {
                     newAppointments = createDailyAppointments(baseAppointment);
                     break;
                 case WEEKLY:
-                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDay());
+                    List<DayOfWeek> weeklyDays = convertToDayOfWeek(requestAppointmentDto.getWeeklyDays());
                     newAppointments = createWeeklyAppointments(baseAppointment,weeklyDays);
                     break;
                 default:
